update with new text

--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Добре дошли в CCS</title>
+  <title>Django App</title>
 
 
 <style>
@@ -206,10 +206,10 @@ pre {
 
 <section class='container'>
 	  <hgroup>
-		<h1>Новият CCS, баце!</h1>
+		<h1>Welcome to Openshift Django App!</h1>
 	  </hgroup>
 
-    Почва се ....
+    To be continued....
 </section>
 
 
