update text in body

--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -208,10 +208,9 @@ pre {
 	  <hgroup>
 		<h1>Welcome to Openshift Django App!</h1>
 	  </hgroup>
-
-    To be continued....
+	  <hgroup>
+		<h1>To be continued....</h1>
+	  </hgroup>
 </section>
-
-
 </body>
 </html>
